GNOME Bugzilla – Bug 754975
bin: trivial fix in critical log when threadpool alloc fails
Last modified: 2015-09-14 15:27:56 UTC
When threadpool alloc fails, the critical log is mentioned as could alloc threadpool, but it should be could not
Created attachment 311247 [details] [review] fix log msg
commit 09900bbfb1eb1411de13e3d25a7d2862311574e5 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Mon Sep 14 11:01:11 2015 +0900 bin: fix typo in log message when threadpool alloc fails https://bugzilla.gnome.org/show_bug.cgi?id=754975
Comment on attachment 311247 [details] [review] fix log msg Thanks!