bin: fix typo in log message when threadpool alloc fails

https://bugzilla.gnome.org/show_bug.cgi?id=754975